# OpenGL-Template

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: build.yml
cmake/: warnings.cmake
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/stb_image/: CMakeLists.txt
dependencies/stb_image/src/: stb_image.c
shaders/: basic.frag  basic.vert
src/: main.cpp  pch.h  types.hpp
src/core/: log.hpp
src/gl/: index_buffer.h  index_buffer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.h  vertex_array.hpp  vertex_buffer.h  vertex_buffer.hpp  vertex_buffer_layout.hpp
src/io/: file_io.cpp  file_io.hpp
src/window/: gl_window.cpp  gl_window.h  gl_window.hpp
