cmake_minimum_required(VERSION 3.10)

project(stb_image)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELEASE On)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELWITHDEBINFO On)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_MINSIZEREL On)

if (CMAKE_BUILD_TYPE MATCHES "Debug")
    add_compile_definitions(_DEBUG)
endif()

add_library(
    stb_image STATIC
    src/stb_image.c
)

target_include_directories(
    stb_image PUBLIC 
    ${PROJECT_SOURCE_DIR}/include
)